CR-2002-06-26-0: Testsuite: - new default parameter for wait_for_jobpending()
                              (return if job is already started)  
                 Enhancem.: - changed timeout values for access_list and
                              project_acces_lists test   

CR-2002-06-25-1: Bugfix:    script syntax error in exec host installation
                 Issue:     #297
                 Bugtraq:   #4705893

AA-2002-06-19-0: Change:    i18n gettext build script

CR-2002-06-17-2: Bugfix:    removed old i18n setup code

CR-2002-06-17-1: Bugfix:    Don't produce infotext error message "Binary not
                            compiled with gettext!"

AA-2002-06-14-0: Bugfix:    Job dependency display in qmon
                 Issue:     #275 affects only qmon
                 Bugtraq:   #4706929

CR-2002-06-13-5: Testsuite: testing issue #140 also for pending jobs
                 Enhancem.: 

JG-2002-06-13-0: Enhancem.  qtcsh: If a command is started in the background 
                            using qrsh, the qrsh option -nostdin is used to 
                            avoid qrsh being suspended.
                 Issue:     #287
                 Bugtraq:   #4701640

CR-2002-06-13-4: Testsuite: merged qrsh test for hold_jid and h option from
                            maintrunc

CR-2002-06-13-3: Testsuite: enhanced qstat test for -l/-q/-pe/-U option tests
                 Issue:     #286

AH-2002-06-12-0: Bugfix:    Prevent use of soft requests for consumables.
                            This addresses problems related to IZ #223 / BT
                            #4700286.  However it does not introduce
                            debitation for soft resource requests.

CR-2002-06-12-0: Testsuite: new testsuite checks (merge from MT)
                 Issue:     #140
                 Issue:     #141
                 Issue:     #171

EB-2002-06-11-0: Bugfix:    qstat shows waiting jobs of other PEs
                 Issue:     #284