@@ -69,8 +69,8 @@ enum {
    SCHEDD_INFO_CKPTNOTFOUND_,
    SCHEDD_INFO_PESLOTSNOTINRANGE_S,
    SCHEDD_INFO_NOACCESSTOPE_S,
-   SCHEDD_INFO_QUEUEINALARM_S,
-   SCHEDD_INFO_QUEUEOVERLOADED_S,
+   SCHEDD_INFO_QUEUEINALARM_SS,
+   SCHEDD_INFO_QUEUEOVERLOADED_SS,
    SCHEDD_INFO_ALLALARMOVERLOADED_,
    SCHEDD_INFO_TURNEDOFF_,
    SCHEDD_INFO_JOBLIST_,
@@ -163,8 +163,8 @@ enum {
 #define INFO_SCHEDD_INFO_CKPTNOTFOUND_SS sge_schedd_text(SCHEDD_INFO_CKPTNOTFOUND_SS)
 #define INFO_SCHEDD_INFO_PESLOTSNOTINRANGE_SS sge_schedd_text(SCHEDD_INFO_PESLOTSNOTINRANGE_SS)
 #define INFO_SCHEDD_INFO_NOACCESSTOPE_SS sge_schedd_text(SCHEDD_INFO_NOACCESSTOPE_SS)
-#define INFO_SCHEDD_INFO_QUEUEINALARM_S sge_schedd_text(SCHEDD_INFO_QUEUEINALARM_S)
-#define INFO_SCHEDD_INFO_QUEUEOVERLOADED_S sge_schedd_text(SCHEDD_INFO_QUEUEOVERLOADED_S)
+#define INFO_SCHEDD_INFO_QUEUEINALARM_SS sge_schedd_text(SCHEDD_INFO_QUEUEINALARM_SS)
+#define INFO_SCHEDD_INFO_QUEUEOVERLOADED_SS sge_schedd_text(SCHEDD_INFO_QUEUEOVERLOADED_SS)
 #define INFO_SCHEDD_INFO_ALLALARMOVERLOADED_ sge_schedd_text(SCHEDD_INFO_ALLALARMOVERLOADED_)
 #define INFO_SCHEDD_INFO_TURNEDOFF_ sge_schedd_text(SCHEDD_INFO_TURNEDOFF_)
 #define INFO_SCHEDD_INFO_JOBLIST_ sge_schedd_text(SCHEDD_INFO_JOBLIST_)
